@@ -833,7 +833,8 @@ and decType0(decl,occ,region) : dec =
        * they are for re-typechecking after the instrumentation phase
        * of debugger or profiler. 
        *)
-       | STRdec strbs => STRdec(map (strbType(occ,region)) strbs)
+       (* | STRdec strbs => STRdec(map (strbType(occ,region)) strbs) *)
+       | STRdec strbs => STRdec strbs
        | ABSdec strbs => ABSdec(map (strbType(occ,region)) strbs)
        | FCTdec fctbs => FCTdec(map (fctbType(occ,region)) fctbs)
        | _ => decl
